# atomic

./: .gitignore  .gitmodules  ADVANCED_EMAIL_USE_CASE.md  ATOM_ARCHITECTURE_SPEC.md  CODE_OF_CONDUCT.md  DEPLOYMENT_GUIDE.md  DEPLOY_LIVE_READY.md  FEATURES.md  IDE_SETUP_PYRIGHT.md  LICENSE.md  NEW_USE_CASES.md  PRODUCTION_FIXES_SUMMARY.md  PRODUCTION_REAL_APIS.md  PROJECT_STATE_SNAPSHOT.md  README.md  USE_CASES.md  check_pyright_env.py  competitor_analysis.db  competitor_data.json  deploy_postgresql.sh  deploy_production.py  docker-compose.postgraphile.auth.yaml  fly.toml  jest.config.js  meeting_assist_external_attendee_preference.sql  migrate_from_env_to_auth.sh  package-lock.json  package.json  packaged_end_to_end_test.sh  production_readiness_check.py  run_jest_tests.sh  run_tests.py  run_tests.sh  setup_local_env.sh  test.py.orig  test_asana.py  test_auth_integration.sh  test_final_auth.sh  test_fixes.sh  test_plaid.py  (+3 more)
atomic-docker/project/functions/: INSTALL_GOOGLE_DEPS.md  LLM_SCHEDULING_INTEGRATION_COMPLETE.md  agendaService.d.ts  agendaService.js  agendaService.ts  jest.config.cjs  jest.setup.js  lanceDBManager.d.ts  lanceDBManager.js  lanceDBManager.ts  memoryManager.d.ts  memoryManager.js  memoryManager.ts  multi_agent_research_service.py  note_utils.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  research_agent.py  send-test-email.js  supertokens-config.js  test-scheduling-integration.ts  test_openai_model.js  test_research_agent.py  tsconfig.json
atomic-docker/project/functions/_libs/: crypto.d.ts  crypto.js  crypto.ts
atomic-docker/project/functions/_mocks/: external-deps.d.ts  external-deps.js  external-deps.ts
atomic-docker/project/functions/_utils/: aws-secrets-manager.d.ts  aws-secrets-manager.js  aws-secrets-manager.ts  basic-auth.d.ts  basic-auth.js  basic-auth.ts  constants.py  crypto.d.ts  crypto.js  crypto.ts  dbService.d.ts  dbService.js  dbService.ts  env.d.ts  env.js  env.ts  errorHandler.d.ts  errorHandler.js  errorHandler.ts  hasura-client.d.ts  hasura-client.js  hasura-client.ts  helpers.d.ts  helpers.js  helpers.ts  lancedb_service.d.ts  lancedb_service.js  lancedb_service.py  lancedb_service.ts  logger.d.ts  logger.js  logger.ts  userService.d.ts  userService.js  userService.ts
atomic-docker/project/functions/agents/: NewZoomSdkAgent.py  __init__.py  _linux_audio_utils.py  google_meet_agent.py  ms_teams_agent.py  zoom_agent.py
atomic-docker/project/functions/asana/: create-task.ts
atomic-docker/project/functions/atom-agent/: BUSINESS_WORKFLOW_INTEGRATION.md  LLM_SCHEDULING_INTEGRATION.md  ORCHESTRATION_COMPLETE.md  SKILLS_INTEGRATION.md  command_handlers.py  conversationState.d.ts  conversationState.js  conversationState.test.js  conversationState.test.ts  conversationState.ts  handler.d.ts  handler.js  handler.test.js  handler.test.ts  handler.ts  integrationTest.ts  meetingPrepScheduler.js  meetingPrepScheduler.ts  note_utils.py  opentelemetry_config.py  research_agent.py  schedulerCallbackHandler.d.ts  schedulerCallbackHandler.js  schedulerCallbackHandler.ts  setup-llm-scheduling.ts  sharedAgentState.d.ts  sharedAgentState.js  sharedAgentState.ts  synthesizing-demo.ts  test.py  test_notes_integration.py  test_research_agent.py  types.d.ts  types.js  types.ts
atomic-docker/project/functions/attend_live_meeting/: __init__.py  handler.py
atomic-docker/project/functions/audio_processor/: handler.py
atomic-docker/project/functions/calendar-integration/: create-event.ts
atomic-docker/project/functions/competitor_analysis/: competitor_analysis.py  database.py  dependencies.py  financial_data_integration.py  main.py  news_api_integration.py  notion_integration.py  scheduler.py  tests.py  twitter_integration.py  web_scraping_integration.py  weekly_briefing.py
atomic-docker/project/functions/discord-service/: index.ts  package.json
atomic-docker/project/functions/docs/: agenda-scheduling.md
atomic-docker/project/functions/email-service/: extract-tasks-from-email.d.ts  extract-tasks-from-email.js  extract-tasks-from-email.ts  service.d.ts  service.js  service.ts  summarize-email.d.ts  summarize-email.js  summarize-email.ts
atomic-docker/project/functions/github-service/: index.ts
atomic-docker/project/functions/gmail-integration/: disconnect-gmail-account.d.ts  disconnect-gmail-account.js  disconnect-gmail-account.ts  generate-gmail-auth-url.d.ts  generate-gmail-auth-url.js  generate-gmail-auth-url.ts  get-gmail-connection-status.d.ts  get-gmail-connection-status.js  get-gmail-connection-status.ts  get-user-gmail-content.d.ts  get-user-gmail-content.js  get-user-gmail-content.ts  handle-gmail-auth-callback.d.ts  handle-gmail-auth-callback.js  handle-gmail-auth-callback.ts  refresh-user-gmail-token.d.ts  refresh-user-gmail-token.js  refresh-user-gmail-token.ts  search-user-gmail.d.ts  search-user-gmail.js  search-user-gmail.ts
atomic-docker/project/functions/gmail-service/: send-email.ts  service.d.ts  service.js  service.ts
atomic-docker/project/functions/google-calendar-sync/: create-event.ts  create-reminder.ts
atomic-docker/project/functions/jira-service/: index.ts  package.json  tsconfig.json
atomic-docker/project/functions/lance-event-matcher/: README.md
atomic-docker/project/functions/lib/: logger.d.ts  logger.js  logger.ts
atomic-docker/project/functions/live_meeting_worker/: Dockerfile.zoom_sdk_worker  requirements.txt  setup_pulseaudio_docker.sh  worker.py
atomic-docker/project/functions/mcp-service/: canva-auth.d.ts  canva-auth.js  canva-auth.ts  canva-callback.d.ts  canva-callback.js  canva-callback.ts  generate-auth-url.d.ts  generate-auth-url.js  generate-auth-url.ts  handle-auth-callback.d.ts  handle-auth-callback.js  handle-auth-callback.ts
atomic-docker/project/functions/msteams-service/: service.d.ts  service.js  service.ts
atomic-docker/project/functions/notion/: create-task.ts
atomic-docker/project/functions/paypal-service/: index.ts  (+1 more)
desktop/tauri/src-tauri/: Cargo.toml  atom_verifier.pkl  atom_wake_word.onnx  main.rs  settings.json  tauri.conf.json
(+4705 files in other folders)
